# bpvo

./: .gitignore  .gitmodules  .travis.yml  .travis_build.sh  .ycm_extra_conf.py  CMakeLists.txt  INSTALL  README  README-tunnel  README.md  TODO  bpvo_config.h.in  build.sh  c.cfg
apps/: CMakeLists.txt  eval_descriptors.cc  eval_kitti.cc  run_kitti_eval.cc  vo.cc  vo_app.cc  vo_app.h  vo_example.cc  vo_example_write_to_file.cc  vo_perf.cc
bpvo/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  aligned_allocator.h  approximate_median.cc  approximate_median.h  bitplanes.cc  bitplanes.h  bitplanes_descriptor.cc  bitplanes_descriptor.h  bounded_buffer.h  census.cc  census.h  central_difference_descriptor.cc  central_difference_descriptor.h  channels.cc  channels.h  config.h  config_file.cc  config_file.h  debug.h  dense_descriptor.cc  dense_descriptor.h  dense_descriptor_pyramid.cc  dense_descriptor_pyramid.h  dense_descriptor_pyramid_level.cc  dense_descriptor_pyramid_level.h  dicp.cc  dicp.h  disparity_space_warp.cc  disparity_space_warp.h  eigen.h  gradient_descriptor.cc  gradient_descriptor.h  histogram.h  image_pyramid.cc  image_pyramid.h  imgproc.cc  imgproc.h  imgradient.cc  (+93 more)
cmake/: FindGooglePerfTools.cmake  MakeVersion.cmake  OptimizeForArchitecture.cmake  SetCompilerOptions.cmake  SetCompilerOptions2.cmake
conf/: bruceton.cfg  dataset.cfg  kitti.cfg  kitti_bitplanes.cfg  kitti_eval.cfg  kitti_intensity.cfg  kitti_seq_0.cfg  kitti_stereo.cfg  perf_bitplanes.cfg  perf_intensity.cfg  stives.cfg  tsukuba.cfg  tsukuba_data.cfg  tsukuba_eval.cfg  tsukuba_stereo.cfg  tunnel.cfg  tunnel2.cfg  wean.cfg
dataset/: CMakeLists.txt  dataset.cc  dataset.h
dmv/: CMakeLists.txt  descriptor.cc  descriptor.h  image_data.cc  image_data.h  lie_group_local_parameterization.h  patch.cc  patch.h  patch_error.cc  patch_error.h  patch_util.h  photo_bundle.cc  photo_bundle.h  photo_bundle_config.cc  photo_bundle_config.h  photo_obj.h  photo_vo.cc  photo_vo.h  photo_vo_base.cc  photo_vo_base.h  photo_vo_patch.cc  photo_vo_patch.h  photo_vo_with_depth.h  photometric_vo.cc  photometric_vo.h  photometric_vo_config.h  pixel_error.cc  pixel_error.h  reprojection_error.cc  reprojection_error.h  scene_point.h  se3.h  se3_ceres.cc  se3_ceres.h  se3_local_parameterization.h  trajectory_with_id.h  vo_data.h  vo_data_writer.h  world_point.h  zncc_patch.h
matlab/: BpvoMex.m  CMakeLists.txt  J.cc  Makefile  README  VoMex.m  bitplanes.m  dspace_jacobian.m  eval_kitti_seq.m  invert_pose.m  make_iters_plot.m  make_tsukuba_eval_plots.m  plot_with_stats.m  run_bpvo.m  run_eval_kitti.m  run_wean.m  se3_hat.m  se3_jacobian.m  skw.m  startup.m  transform_points.m  update_pose_plot.m  vo_mex.cc  vo_mex.mexa64  write_pose_for_kitti.m
matlab/160329/: 01.txt  02.txt  04.txt  05.txt  07.txt  09.txt  10.txt
matlab/figs/: kitti_eval_bpvo.tex  kitti_eval_cmp.tex  kitti_eval_latest.tex  tsukuba_bitplanes_9_iters.tex  tsukuba_bitplanes_9_time.tex  (+6 more)
results/: kitti_intensity_seq_0_no_kf_iter_num.txt  kitti_intensity_seq_0_no_kf_iter_time.txt  kitti_intensity_seq_0_no_kf_path.txt  kitti_intensity_seq_0_no_kf_poses.txt  kitti_intensity_seq_10_no_kf_iter_num.txt  kitti_intensity_seq_10_no_kf_iter_time.txt  kitti_intensity_seq_10_no_kf_path.txt  kitti_intensity_seq_10_no_kf_poses.txt  kitti_intensity_seq_1_no_kf_iter_num.txt  kitti_intensity_seq_1_no_kf_iter_time.txt  kitti_intensity_seq_1_no_kf_path.txt  kitti_intensity_seq_1_no_kf_poses.txt  kitti_intensity_seq_2_no_kf_iter_num.txt  kitti_intensity_seq_2_no_kf_iter_time.txt  kitti_intensity_seq_2_no_kf_path.txt  kitti_intensity_seq_2_no_kf_poses.txt  kitti_intensity_seq_3_no_kf_iter_num.txt  kitti_intensity_seq_3_no_kf_iter_time.txt  kitti_intensity_seq_3_no_kf_path.txt  kitti_intensity_seq_3_no_kf_poses.txt  kitti_intensity_seq_4_no_kf_iter_num.txt  kitti_intensity_seq_4_no_kf_iter_time.txt  kitti_intensity_seq_4_no_kf_path.txt  kitti_intensity_seq_4_no_kf_poses.txt  kitti_intensity_seq_5_no_kf_iter_num.txt  kitti_intensity_seq_5_no_kf_iter_time.txt  kitti_intensity_seq_5_no_kf_path.txt  kitti_intensity_seq_5_no_kf_poses.txt  kitti_intensity_seq_6_no_kf_iter_num.txt  kitti_intensity_seq_6_no_kf_iter_time.txt  kitti_intensity_seq_6_no_kf_path.txt  kitti_intensity_seq_6_no_kf_poses.txt  kitti_intensity_seq_7_no_kf_iter_num.txt  kitti_intensity_seq_7_no_kf_iter_time.txt  kitti_intensity_seq_7_no_kf_path.txt  kitti_intensity_seq_7_no_kf_poses.txt  kitti_intensity_seq_8_no_kf_iter_num.txt  kitti_intensity_seq_8_no_kf_iter_time.txt  kitti_intensity_seq_8_no_kf_path.txt  kitti_intensity_seq_8_no_kf_poses.txt  (+4 more)
scripts/: eval_kitti  eval_tsukuba_stereo  profile  run_timing  run_valgrind
test/: CMakeLists.txt  data_loader.cc  data_loader.h  program_options.cc  program_options.h  scoped_profiler.cc  scoped_profiler.h  test_J_reduction.cc  test_approx_median.cc  test_bench.cc  test_bitplanes_descriptor.cc  test_cereal.cc  test_ceres.cc  test_ceres2.cc  test_ceres_photo_error.cc  test_coeffs.cc  test_cweights.cc  test_dataset.cc  test_dataset2.cc  test_dataset_thread.cc  test_descriptors.cc  test_dmv.cc  test_dot.cc  test_dot_avx.cc  test_eigen.cc  test_full_rank.cc  test_gmag.cc  test_histogram.cc  test_imwarp.cc  test_imwarp2.cc  test_imwarp_init.cc  test_interp_stuff.cc  test_jacboian.cc  test_jacobian.cc  test_kitti.cc  test_kitti_data_loader.cc  test_linear_system_builder.cc  test_load.cc  test_local_max.cc  test_masks.cc  (+38 more)
utils/: CMakeLists.txt  bounded_buffer.h  cv_cereal.h  data_loader.cc  data_loader.h  dataset.cc  dataset.h  dataset2.cc  dataset2.h  dataset_create.cc  dataset_loader_thread.cc  dataset_loader_thread.h  eigen_cereal.h  file_loader.cc  file_loader.h  glob.cc  glob.h  image_frame.cc  image_frame.h  kitti_dataset.cc  kitti_dataset.h  kitti_eval.cc  kitti_eval.h  program_options.cc  program_options.h  rsgm.cc  rsgm.h  sgm.cc  sgm.h  sps.cc  sps.h  stereo_algorithm.cc  stereo_algorithm.h  stereo_calibration.cc  stereo_calibration.h  tsukuba_dataset.cc  tsukuba_dataset.h  tunnel_data_loader.cc  tunnel_data_loader.h  tunnel_dataset.cc  (+3 more)
(+396 files in other folders)
